--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,8 +10,36 @@
     tools:context=".MainActivity" >
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
-</RelativeLayout>
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:text="@string/greeting" />
+    
+    <LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical" >
+    
+	    <Button
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content" 
+	        android:onClick="mainCreateFile"
+	        android:text="@string/button_newFile" />
+	    
+	    <Button
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content" 
+	        android:onClick="mainCreateSession"
+	        android:text="@string/button_newSession" />
+	    
+	    <Button
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content" 
+	        android:onClick="mainJoinSession"
+	        android:text="@string/button_joinSession" />
+	    
+	</LinearLayout>
+    
+</LinearLayout>
