--- a/res/layout/enter_text_dialog.xml
+++ b/res/layout/enter_text_dialog.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
     
     <EditText 
-        android:id="@+id/new_file_dialog_field"
+        android:id="@+id/enter_text_dialog_field"
         android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,7 +13,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:hint="@string/enterFilename" />
+        android:hint="@string/type_here" />
     
 
 </LinearLayout>
