join session added, can monitor cursor location changes

--- a/res/layout/activity_text_editor.xml
+++ b/res/layout/activity_text_editor.xml
@@ -46,7 +46,7 @@
 	    
 	</LinearLayout>
 	
-    <EditText android:id="@+id/editor_obj"
+    <edu.umich.jgracik_zhuwei.eecs441.wewrite.EditTextCursor android:id="@+id/editor_obj"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
