--- a/res/layout/activity_text_editor.xml
+++ b/res/layout/activity_text_editor.xml
@@ -51,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="top|left"
-        android:inputType="textMultiLine"
+        android:inputType="textMultiLine|textNoSuggestions"
         android:hint="@string/type_here" />
 
 </LinearLayout>
