--- a/res/menu/text_editor.xml
+++ b/res/menu/text_editor.xml
@@ -5,5 +5,7 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-
+    <item 
+        android:id="@+id/action_display_session_id"
+        android:title="@string/session_id"/>
 </menu>
