--- a/res/menu/text_editor.xml
+++ b/res/menu/text_editor.xml
@@ -7,5 +7,6 @@
         android:title="@string/action_settings"/>
     <item 
         android:id="@+id/action_display_session_id"
+        android:showAsAction="ifRoom"
         android:title="@string/session_id"/>
 </menu>
